[gd_scene load_steps=69 format=3 uid="uid://dosfg8jxannoa"]

[ext_resource type="AudioStream" uid="uid://s88e4xmnp06u" path="res://assets/sounds/Motos/sfxCredit.ogg" id="1_8ejw7"]
[ext_resource type="AudioStream" uid="uid://bbgkcpciqfeqi" path="res://assets/music/Motos/AttractTheme.ogg" id="1_jli1g"]
[ext_resource type="Texture2D" uid="uid://c1mfyqd0cfj43" path="res://assets/graphics/blacksquare.png" id="1_kgxbj"]
[ext_resource type="Script" path="res://assets/scenes/secrets/motos/motos_title.gd" id="1_wj55b"]
[ext_resource type="Texture2D" uid="uid://7vdiss65fa52" path="res://assets/graphics/cool_grid.png" id="2_cg6ed"]
[ext_resource type="Texture2D" uid="uid://0hibbdt1fdoc" path="res://assets/graphics/Motos/title.png" id="3_67s76"]
[ext_resource type="FontFile" uid="uid://c363d8efh4ofg" path="res://assets/fonts/novem___.ttf" id="4_j28cx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_78evo"]
atlas = ExtResource("2_cg6ed")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s85pk"]
atlas = ExtResource("2_cg6ed")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmn1u"]
atlas = ExtResource("2_cg6ed")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1t3l"]
atlas = ExtResource("2_cg6ed")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvwh3"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cro5i"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vup5l"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7sk8"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0utw"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpath"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_evlqt"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh231"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3woef"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbec7"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3328, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl2b7"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3584, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwp73"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3840, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxevv"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4096, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdo6m"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4352, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkey3"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4608, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1xd"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4864, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyy4t"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5120, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkxg1"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5376, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7ug7"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5632, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3wos"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5888, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bakap"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6144, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebm6y"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6400, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf2a5"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6656, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ym1"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6912, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv4f7"]
atlas = ExtResource("2_cg6ed")
region = Rect2(7168, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fqdq"]
atlas = ExtResource("2_cg6ed")
region = Rect2(7424, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_87epb"]
atlas = ExtResource("2_cg6ed")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqnxk"]
atlas = ExtResource("2_cg6ed")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwghf"]
atlas = ExtResource("2_cg6ed")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow8re"]
atlas = ExtResource("2_cg6ed")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmhsh"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_67p63"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf2ux"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vglex"]
atlas = ExtResource("2_cg6ed")
region = Rect2(1792, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffpw1"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2048, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fhdd"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2304, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnssu"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2560, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2l0s"]
atlas = ExtResource("2_cg6ed")
region = Rect2(2816, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gp7u"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3072, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i6ip"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3328, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oqk5"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3584, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4twl"]
atlas = ExtResource("2_cg6ed")
region = Rect2(3840, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eypfw"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4096, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0btgs"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4352, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y130t"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4608, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i3eu"]
atlas = ExtResource("2_cg6ed")
region = Rect2(4864, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ejl"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5120, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uqp2"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5376, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ytxw"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5632, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mihep"]
atlas = ExtResource("2_cg6ed")
region = Rect2(5888, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_38bsq"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6144, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxqsg"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6400, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ojmd"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6656, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt3hx"]
atlas = ExtResource("2_cg6ed")
region = Rect2(6912, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6vel"]
atlas = ExtResource("2_cg6ed")
region = Rect2(7168, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkbcs"]
atlas = ExtResource("2_cg6ed")
region = Rect2(7424, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_sq2fb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78evo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s85pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmn1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1t3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvwh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cro5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vup5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7sk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0utw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpath")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evlqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh231")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3woef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbec7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl2b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwp73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxevv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdo6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkey3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyy4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkxg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7ug7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3wos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bakap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebm6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf2a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ym1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv4f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fqdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87epb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqnxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwghf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow8re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmhsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67p63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf2ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vglex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffpw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fhdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnssu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2l0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gp7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i6ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oqk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4twl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eypfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0btgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y130t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i3eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ejl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ytxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mihep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38bsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxqsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ojmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt3hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6vel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkbcs")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="MotosTitle" type="Node2D"]
script = ExtResource("1_wj55b")

[node name="grid" type="AnimatedSprite2D" parent="."]
modulate = Color(0.568627, 0, 0, 1)
position = Vector2(512, 256)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sq2fb")
autoplay = "default"

[node name="title" type="Sprite2D" parent="."]
position = Vector2(512, 96)
scale = Vector2(0.987654, 0.977099)
texture = ExtResource("3_67s76")

[node name="howtoplay" type="Node2D" parent="."]

[node name="header" type="Label" parent="howtoplay"]
offset_left = 384.0
offset_top = 176.0
offset_right = 640.0
offset_bottom = 208.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 20
text = "How to Play:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="control1" type="Label" parent="howtoplay"]
offset_left = 288.0
offset_top = 224.0
offset_right = 576.0
offset_bottom = 432.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 15
text = "Use the arrow keys to move.

Ram into other enemies and knock them
off of the platform to proceed to the
next level.
Falling off the platform yourself
results into losing a life. Losing a
life results in a game over!

Go for the highest score !!
"

[node name="cast1" type="Label" parent="howtoplay"]
offset_left = 640.0
offset_top = 208.0
offset_right = 768.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 15
text = "You
"
vertical_alignment = 1

[node name="cast2" type="Label" parent="howtoplay"]
offset_left = 640.0
offset_top = 240.0
offset_right = 768.0
offset_bottom = 344.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 15
text = "Power Parts
(Pick up and
apply to be
tougher to knock
off)
"
vertical_alignment = 1

[node name="cast3" type="Label" parent="howtoplay"]
offset_left = 640.0
offset_top = 344.0
offset_right = 768.0
offset_bottom = 448.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 15
text = "Jump Parts
(Pick up and
apply to be
able to jump with
left ctrl)
"
vertical_alignment = 1

[node name="credit" type="Label" parent="."]
offset_left = 384.0
offset_top = 448.0
offset_right = 640.0
offset_bottom = 480.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 20
text = "Credits 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Startup" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Startup"]
position = Vector2(512, 256)
scale = Vector2(256, 256)
texture = ExtResource("1_kgxbj")

[node name="ramok" type="Label" parent="Startup"]
visible = false
offset_left = 288.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 20
text = "RAM ok"
vertical_alignment = 1

[node name="romok" type="Label" parent="Startup"]
visible = false
offset_left = 288.0
offset_top = 80.0
offset_right = 544.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j28cx")
theme_override_font_sizes/font_size = 20
text = "ROM ok"
vertical_alignment = 1

[node name="Sounds" type="Node" parent="."]

[node name="musTitleTheme" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("1_jli1g")

[node name="sfxStart" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("1_8ejw7")

[connection signal="finished" from="Sounds/sfxStart" to="." method="_on_sfx_start_finished"]
